--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,5 +11,5 @@ jobs:
       run: |
         npm install -g localtunnel
         lt --port 22 &
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
+    #- name: Setup tmate session
+    #  uses: mxschmitt/action-tmate@v3
