--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,12 +4,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    #- uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+    - uses: valeriangalliat/action-sshd-cloudflared@v1
     #- name: Setup upterm session
     #  uses: lhotari/action-upterm@v1
-    - name: Start tunnel
-      run: |
-        npm install -g localtunnel
-        lt --port 22 &
+
     #- name: Setup tmate session
     #  uses: mxschmitt/action-tmate@v3
