--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,11 +2,23 @@ name: CI
 on:
   - push
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  deploy:
+    name: Set up tunnel
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: valeriangalliat/action-sshd-cloudflared@v2
+    - name: Checkout
+      uses: actions/checkout@v2
+      
+    - name: Setup tunnel
+      uses: joshlarsen/ssh-tunnel-action@main
+      with:
+        timeout: 1h
+        ssh_public_key: ${{ secrets.SSH_PUBLIC_KEY }}
+        ngrok_token: ${{ secrets.NGROK_TOKEN }}
+    
+    #  - uses: actions/checkout@v2
+    #  - uses: valeriangalliat/action-sshd-cloudflared@v2
+    
     #- name: Setup upterm session
     #  uses: lhotari/action-upterm@v1
 
